--- a/.github/workflows/solar-system.yaml
+++ b/.github/workflows/solar-system.yaml
@@ -52,8 +52,9 @@ jobs:
       run: npm install
     - name: run code coverage
       run: npm run coverage
-      continue-on-error: true
+      
     - name: upload code coverage
+      if: always()
       uses: actions/upload-artifact@v3
       with: 
         name: coverage-results
