--- a/.github/workflows/solar-system.yaml
+++ b/.github/workflows/solar-system.yaml
@@ -27,6 +27,16 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{matrix.version}}
+    - name: Cache node modules
+      id: cache-npm
+      uses: actions/cache@v3
+      env:
+        cache-name: cache-node-modules
+      with:
+          # npm cache files are stored in node_modules
+        path: node_modules
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+
     - name: install dependencies
       run: npm install
     - name: test the nodejs code with node test
@@ -48,6 +58,16 @@ jobs:
       uses: actions/setup-node@v3
       with: 
         node-version: 18
+    - name: Cache node modules
+      id: cache-npm
+      uses: actions/cache@v3
+      env:
+        cache-name: cache-node-modules
+      with:
+            # npm cache files are stored in node_modules
+        path: node_modules
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+        
     - name: install dependencies
       run: npm install
     - name: run code coverage
