--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "http-server": "^14.1.1",
     "mocha-junit-reporter": "^2.2.1",
     "mongoose": "5.13.20",
     "nodemon": "^3.1.4",
