--- a/.github/workflows/solar-system.yaml
+++ b/.github/workflows/solar-system.yaml
@@ -93,6 +93,13 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
+    
+    - name: github private registry login
+      uses: docker/login-action@v
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN}}
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
@@ -106,7 +113,9 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: katravath55/github-action-test:latest
+        tags: |
+          katravath55/github-action-test:latest
+          ghcr.io/${{ github.actor}}/solar-system-demo:${{github.run_number}}
 
 
 
