--- a/.github/workflows/solar-system.yaml
+++ b/.github/workflows/solar-system.yaml
@@ -95,7 +95,7 @@ jobs:
       uses: docker/setup-buildx-action@v3
     
     - name: github private registry login
-      uses: docker/login-action@v
+      uses: docker/login-action@v3
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
