--- a/.github/workflows/solar-system.yaml
+++ b/.github/workflows/solar-system.yaml
@@ -63,6 +63,12 @@ jobs:
       MONGO_INITDB_ROOT_PASSWORD: skatravath
     runs-on: ubuntu-latest
     steps:
+    - name: Login to Docker Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
     - name: checkout code
       uses: actions/checkout@v4
     - name: install nodejs
