--- a/.github/workflows/solar-system.yaml
+++ b/.github/workflows/solar-system.yaml
@@ -47,34 +47,36 @@ jobs:
         name: nodejs-artifact
         path: test-results.xml
 
+
   code-coverage:
     needs: unit-testing
     name: code coverage
+    runs-on: ubuntu-latest
+
     container:
       image: node:18
+
     services:
       mongo-db:
         image: katravath55/mongodb:latest
-        options:
-          -- name mongo
+        options: >-
+          --name mongo
+
     env:
       MONGO_URI: 'mongodb://mongo:27017/superData'
       MONGO_INITDB_ROOT_USERNAME: skatravath
       MONGO_INITDB_ROOT_PASSWORD: skatravath
-    runs-on: ubuntu-latest
+
     steps:
-    - name: Login to Docker Registry
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-    - name: checkout code
-      uses: actions/checkout@v4
-    - name: install nodejs
-      uses: actions/setup-node@v3
-      with: 
-        node-version: 18
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
     - name: Cache node modules
       id: cache-npm
       uses: actions/cache@v3
