--- a/.github/workflows/solar-system.yaml
+++ b/.github/workflows/solar-system.yaml
@@ -124,6 +124,7 @@ jobs:
     steps:
       - name: Check out the repository
         uses: actions/checkout@v3
+        continue-on-error: true
       - name: install kubectl
         uses: azure/setup-kubectl@v3
         with:
