--- a/.github/workflows/solar-system.yaml
+++ b/.github/workflows/solar-system.yaml
@@ -143,6 +143,22 @@ jobs:
           kubectl version
           kubectl get pods -n kube-system
           kubectl get nodes
+        continue-on-error: true
+      - name: save NGINX ingress IP as a GiTHUB Environment variale
+        run: |
+          echo "INGRESS_IP=$(kubectl get services ingress_ip -n ingress-nginx)" >> $GITHUB_ENV
+        continue-on-error: true
+      - name: replace tokens
+        uses: cschleiden/replace-tokens@v1
+        with:
+          tokenPrefix: '_{_'
+          tokenSuffix: '_}_'
+          files: '["kubernetes/development/*.yaml"]'
+        env:
+          NAMESPACE: ${{ vars.NAMESPACE}}
+          REPLICAS: ${{vars.REPLICAS}}
+          IMAGE: katravath55/github-action-test:latest
+          INGRESS_IP: ${{env.INGRESS_IP}}
 
 
 
