--- a/.github/workflows/solar-system.yaml
+++ b/.github/workflows/solar-system.yaml
@@ -119,7 +119,7 @@ jobs:
 
 
   dev-deploy:
-    if: containes('github.ref', 'feature/')
+    if: contains ('github.ref', 'feature/')
     needs: build-and-push
     uses: ./.github/workflows/resuable-workflow.yaml
 
