--- a/.github/workflows/solar-system.yaml
+++ b/.github/workflows/solar-system.yaml
@@ -122,6 +122,8 @@ jobs:
     if: github.ref == 'refs/heads/feature/test'
     needs: build-and-push
     uses: ./.github/workflows/resuable-workflow.yaml
+    secrets:
+      k8s-configfile: ${{ secrets.KUBECONFIG}}
 
   prod-deploy:
     if: github.ref == 'refs/heads/main'
