added in prod deploy also

--- a/.github/workflows/solar-system.yaml
+++ b/.github/workflows/solar-system.yaml
@@ -129,6 +129,8 @@ jobs:
     if: github.ref == 'refs/heads/main'
     needs: build-and-push
     uses: ./.github/workflows/resuable-workflow.yaml
+    secrets:
+      k8s-configfile: ${{ secrets.KUBECONFIG}}
 
 
 
