--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -48,3 +48,30 @@ jobs:
         with:
           name: Mocha-Test-Result
           path: test-results.xml
+
+  code-coverage:
+    name: code coverage
+    runs-on: ubuntu-latest
+        
+    steps:
+    - name: Checkout Repository 
+      uses: actions/checkout@v4
+                
+    - name: Setup NodeJS Version - 18
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
+        
+    - name: Install Dependencies
+      run: npm install
+        
+    - name: Check Code Coverage
+      run: npm run coverage
+        
+    - name: Archive Test Result
+      uses: actions/upload-artifact@v3
+      with:
+        name: Code-Coverage-Result
+        path: coverage
+        retention-days: 5
+        
