--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -66,6 +66,7 @@ jobs:
       run: npm install
         
     - name: Check Code Coverage
+      continue-on-error: true
       run: npm run coverage
         
     - name: Archive Test Result
