--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -19,7 +19,7 @@ jobs:
     name: Unit Testing
     strategy:
       matrix:
-        nodejs_version: [18, 19, 20]
+        nodejs_version: [18, 20]
         operating_system: [ubuntu-latest, macos-latest]
         exclude:
           - nodejs_version: 18
@@ -45,7 +45,7 @@ jobs:
         run: npm test
 
       - name: Archive Test Result
-        if: steps.nodejs-unit-testing-step.outcome == 'failure' || steps.nodejs-unit-testing-step.outcome == 'success'
+        if: ${{ failure() }} && (steps.nodejs-unit-testing-step.outcome == 'failure' || steps.nodejs-unit-testing-step.outcome == 'success')
         uses: actions/upload-artifact@v3
         with:
           name: Mocha-Test-Result
