--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -37,6 +37,12 @@ jobs:
         with:
           node-version: ${{ matrix.nodejs_version }}
 
+      - name: Cache NPM dependencies
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+      
       - name: Install Dependencies
         run: npm install
 
@@ -63,7 +69,13 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 18
-        
+
+    - name: Cache NPM dependencies
+      uses: actions/cache@v4
+      with:
+        path: node_modules
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}        
+
     - name: Install Dependencies
       run: npm install
         
