--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Siddharth Barahalikar <barahalikar.siddharth@gmail.com>",
   "homepage": "https://www.linkedin.com/in/barahalikar-siddharth/",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "start": "node app.js",
     "test": "mocha app-test.js --timeout 10000 --reporter mocha-junit-reporter --exit",
@@ -18,6 +19,7 @@
     "express": "^4.18.2",
     "mocha-junit-reporter": "^2.2.1",
     "mongoose": "5.13.20",
+    "nodemon": "^3.1.4",
     "nyc": "^15.1.0"
   },
   "devDependencies": {
