--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "type": "module",
   "scripts": {
     "start": "node app.js",
-    "test": "mocha app-test.js --timeout 10000 --reporter mocha-junit-reporter --exit",
-    "coverage": "nyc --reporter cobertura --reporter lcov --reporter text --reporter json-summary  mocha app-test.js --timeout 10000  --exit"
+    "test": "mocha app-test.cjs --timeout 10000 --reporter mocha-junit-reporter --exit",
+    "coverage": "nyc --reporter cobertura --reporter lcov --reporter text --reporter json-summary  mocha app-test.cjs --timeout 10000  --exit"
   },
   "nyc": {
     "check-coverage": true,
