--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "author": "Siddharth Barahalikar <barahalikar.siddharth@gmail.com>",
   "homepage": "https://www.linkedin.com/in/barahalikar-siddharth/",
   "license": "MIT",
-  "type": "module",
   "scripts": {
     "start": "node app.js",
-    "test": "mocha app-test.cjs --timeout 10000 --reporter mocha-junit-reporter --exit",
-    "coverage": "nyc --reporter cobertura --reporter lcov --reporter text --reporter json-summary  mocha app-test.cjs --timeout 10000  --exit"
+    "test": "mocha app-test.js --timeout 10000 --reporter mocha-junit-reporter --exit",
+    "coverage": "nyc --reporter cobertura --reporter lcov --reporter text --reporter json-summary  mocha app-test.js --timeout 10000  --exit"
   },
   "nyc": {
     "check-coverage": true,
