--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "lines": 90
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mocha-junit-reporter": "^2.2.1",
-    "mongoose": "5.13.20",
-    "nodemon": "^3.1.4",
-    "nyc": "^15.1.0"
+    "cors": "*",
+    "express": "*",
+    "mocha-junit-reporter": "*",
+    "mongoose": "*",
+    "nodemon": "*",
+    "nyc": "*"
   },
   "devDependencies": {
     "chai": "*",
