--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -70,11 +70,11 @@ jobs:
       with:
         node-version: 18
 
-    - name: Cache NPM dependencies
-      uses: actions/cache@v3
-      with:
-        path: node_modules
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}        
+#    - name: Cache NPM dependencies
+#      uses: actions/cache@v3
+#      with:
+#        path: node_modules
+#        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}        
 
 
     - name: Install Dependencies
