--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -37,11 +37,11 @@ jobs:
         with:
           node-version: ${{ matrix.nodejs_version }}
 
-      - name: Cache NPM dependencies
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+#      - name: Cache NPM dependencies
+#        uses: actions/cache@v4
+#        with:
+#          path: node_modules
+#          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
       
       - name: Install Dependencies
         run: npm install
