--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -30,4 +30,6 @@ jobs:
           uses: actions/upload-artifact@v3
           with:
             name: Mocha-Test-Result
-            path: test-results.xml
+            path: test-results.
+            
+            
