--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -8,8 +8,8 @@ on:
       - 'feature/*'
 
 env:
-  MONGO_URI: "mongodb+srv://${{ secrets.MONGO_USERNAME }}:${{ secrets.MONGO_PASSWORD }}@supercluster.d83jj.mongodb.net/superData"
-  MONGO_USERNAME: ${{ vars.MONGO_USERNAME }}
+  MONGO_URI: 'mongodb+srv:// supercluster.d83j-mongodb.net/superData'
+  MANGO_USERNAME: ${{ vars.MANGO_USERNAME}}
   MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
 
 jobs:
