--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -15,7 +15,7 @@ jobs:
         - name: Checkout Repository
           uses: actions/checkout@v4
 
-        - name: Setup NodeJS Version
+        - name: Setup NodeJS Version - 20
           uses: actions/setup-node@v4
           with:
             node-version: 20
