--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -42,3 +42,36 @@ jobs:
           with:
             name: Mocha-Test-Result
             path: test-results.xml
+            retention-days: 5
+
+    code-coverage:
+        name: Code Coverage
+        # strategy:
+        #   matrix:
+        #     nodejs_version: [18, 19, 20]
+        #     operating_system: [ubuntu-latest, macos-latest]
+        #     exclude:
+        #       - nodejs_version: 18
+        #         operating_system: macos-latest
+        runs-on: ubuntu-latest
+        steps:
+        - name: Checkout Repository
+          uses: actions/checkout@v4
+
+        - name: Setup NodeJS Version - 18
+          uses: actions/setup-node@v3
+          with:
+            node-version: 18
+    
+        - name: Install Dependencies
+          run: npm install
+    
+        - name: Check Code Coverage
+          run: npm run coverage
+          
+        - name: Archive Test Result
+          uses: actions/upload-artifact@v3
+          with:
+            name: Code-Coverage-Result
+            path: coverage
+            retention-days: 5
