--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -67,6 +67,7 @@ jobs:
           run: npm install
     
         - name: Check Code Coverage
+          continue-on-error: true
           run: npm run coverage
           
         - name: Archive Test Result
