--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -30,6 +30,13 @@ jobs:
           uses: actions/setup-node@v3
           with:
             node-version: ${{ matrix.nodejs_version }}
+        
+        - name: Cache NPM Dependencies
+          uses: actions/cache@v3
+          with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+           path: node_modules
+           key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}
     
         - name: Install Dependencies
           run: npm install
@@ -64,7 +71,14 @@ jobs:
           uses: actions/setup-node@v3
           with:
             node-version: 18
-    
+
+        - name: Cache NPM Dependencies
+          uses: actions/cache@v3
+          with:
+            # npm cache files are stored in `~/.npm` on Linux/macOS
+             path: node_modules
+             key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}
+             
         - name: Install Dependencies
           run: npm install
     
