--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -101,8 +101,8 @@ jobs:
           - name: Checkout Repository
             uses: actions/checkout@v4
 
-          - name: Dockerhub login
-            uses: docker/login-actions@2.2.0
+          - name: Login to Docker Hub
+            uses: docker/login-action@v3
             with:
               username: ${{ vars.DOCKERHUB_USERNAME }}
               password: ${{ secrets.DOCKERHUB_PASSWORD }}
