--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -106,3 +106,26 @@ jobs:
             with:
               username: ${{ vars.DOCKERHUB_USERNAME }}
               password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+          - name: Build Docker image for testing
+            uses: docker/build-push-action@v4
+            with:
+              context: .
+              push: false
+              tags: ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+
+          - name: Docker image Test
+            run: |
+             docker images
+             docker run --name solar-system-app -d \
+                -p 3000:3000 \
+                -e MONGO_URI=$MONGO_URI \
+                -e MONGO_USERNAME=${{ vars.MONGO_USERNAME }} \
+                -e MONGO_PASSWORD=${{ secrets.DOCKERHUB_PASSWORD }} \
+                ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+
+             export IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
+             echo $IP
+
+             echo Test the image URL using wget
+             wget -q -O- 127.0.0.1:3000/live | grep live
