--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -129,3 +129,10 @@ jobs:
 
              echo Test the image URL using wget
              wget -q -O- 127.0.0.1:3000/live | grep live
+
+          - name: Docker Push
+            uses: docker/build-push-action@v4
+            with:
+              context: .
+              push: true
+              tags: ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
