--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -107,6 +107,13 @@ jobs:
               username: ${{ vars.DOCKERHUB_USERNAME }}
               password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
+          - name: Login to GHCR
+            uses: docker/login-action@v3
+            with:
+              registry: ghcr.io
+              username: ${{ github.repository_owner }}
+              password: ${{ secrets.GITHUB_TOKEN }}
+
           - name: Build Docker image for testing
             uses: docker/build-push-action@v4
             with:
@@ -130,9 +137,11 @@ jobs:
              echo Test the image URL using wget
              wget -q -O- 127.0.0.1:3000/live | grep live
 
-          - name: Docker Push
+          - name: Container Registry Push
             uses: docker/build-push-action@v4
             with:
               context: .
               push: true
-              tags: ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+              tags: |
+                ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+                ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}
