updated package permissions

--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -96,6 +96,8 @@ jobs:
     docker:
         name: Containerization
         needs: [unit-testing, code-coverage]
+        permissions: 
+          packages: write
         runs-on: ubuntu-latest
         steps:
           - name: Checkout Repository
@@ -144,4 +146,4 @@ jobs:
               push: true
               tags: |
                 ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
-                ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}
+                ghcr.io/${{ vars.GHCR_USERNAME }}/solar-system:${{ github.sha }}
