--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -72,6 +72,17 @@ jobs:
         #       - nodejs_version: 18
         #         operating_system: macos-latest
         runs-on: ubuntu-latest
+        container: 
+          image: node:18
+        services:
+          mongodb:
+            image: siddharth67/mongo-db:non-prod
+            options: 
+              -- name mongo
+        env:
+         MONGO_URI: 'mongodb://mongo:32768/superData'
+         MONGO_USERNAME: non-prod-user
+         MONGO_PASSWORD: non-prod-password
         steps:
         - name: Checkout Repository
           uses: actions/checkout@v4
