--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -44,7 +44,7 @@ jobs:
           uses: actions/cache@v3
           with:
            # npm cache files are stored in `~/.npm` on Linux/macOS
-           path: node_modules
+           path: ~/.npm #node_modules
            key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}
     
         - name: Install Dependencies
