--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -40,7 +40,7 @@ jobs:
           with:
             node-version: ${{ matrix.nodejs_version }}
         
-        - name: Cache NPM Dependencies
+        - name: Cache NPM dependencies
           uses: actions/cache@v3
           with:
            # npm cache files are stored in `~/.npm` on Linux/macOS
