--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -167,3 +167,21 @@ jobs:
               tags: |
                 ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
                 ghcr.io/${{ vars.GHCR_USERNAME }}/solar-system:${{ github.sha }}
+
+    dev-deploy:
+      needs: [docker]
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout Repository
+          uses: actions/checkout@v4
+        
+        - name: Install Kubectl CLI
+          uses: azure/setup-kubectl@v4
+          with:
+            version: 'v1.26.0'
+
+        - name: Fetch Kubernetes Cluster Details
+          run: |
+            kubectl version --short
+            echo -------------------------------
+            kubectl get nodes
