update workflows [skip ci]

--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -169,7 +169,32 @@ jobs:
                 ghcr.io/${{ vars.GHCR_USERNAME }}/solar-system:${{ github.sha }}
 
     dev-deploy:
+      if: contains(github.ref, 'feature/')
       needs: [docker]
+      uses: ./.github/workflows/reuse-deployment.yml@feature/exploring-workflows
+    
+    dev-integration-testing:
+        if: contains(github.ref, 'feature/')
+        name: Dev Integration Testing
+        needs: dev-deploy
+        runs-on: ubuntu-latest
+        steps:
+          - name: Test URL Output using CURL and JQ
+            env:
+              URL: ${{ needs.dev-deploy.outputs.APP_INGRESS_URL }}  # Refer to the environment variable set earlier
+            run: |
+              echo $URL
+              echo "---------------------------------------------"
+              curl https://$URL/live-s-k -s -k | jq -r .status | grep -i live
+
+    prod-deploy:
+      if: github.ref == 'refs/heads/main'
+      needs: [docker]
+      environment: 
+        name: prod
+        url: https://${{ steps.set-ingress-host-address.outputs.APP_INGRESS_HOST }}
+      outputs:
+        APP_INGRESS_URL: ${{ steps.set-ingress-host-address.outputs.APP_INGRESS_HOST }}
       runs-on: ubuntu-latest
       steps:
         - name: Checkout Repository
@@ -179,9 +204,68 @@ jobs:
           uses: azure/setup-kubectl@v4
           with:
             version: 'v1.26.0'
+        
+        - name: Set kubeconfig file
+          uses: azure/k8s-set-context@v4
+          with:
+            method: kubeconfig
+            kubeconfig: ${{ secrets.KUBECONFIG }}
 
         - name: Fetch Kubernetes Cluster Details
           run: |
             kubectl version --short
             echo -------------------------------
             kubectl get nodes
+        
+        - name: Save Nginx Ingress Controller IP as a GITHUB Environment Variable 
+          run: |
+            echo "INGRESS_IP=$(kubectl -n ingress-nginx get services ingress-nginx-controller -o jsonpath="[.status.loadBalancer.ingress[0].ip}")" >> $GITHUB_ENV
+
+        - name: Replace Token in Manifest files
+          uses: cschleiden/replace-tokens@v1
+          with:
+            tokenPrefix: ' { '
+            tokenSuffix: ' } '
+            files: '["kubernetes/prod/*.yaml"]'
+          env:
+            NAMESPACE: ${{ vars.NAMESPACE }}
+            REPLICAS: ${{ vars.REPLICAS }}
+            IMAGE: ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+            INGRESS_IP: ${{ env.INGRESS_IP }}
+
+        - name: Check files
+          run: |
+            cat kubernetes/development/*.yaml
+        
+        - name: Create MongoDB Secret
+          run: |
+            kubectl -n ${{ vars.NAMESPACE }} create secret generic mongo-db-creds \
+            --from-literal=MONGO_URI=${{ env.MONGO_URI }} \
+            --from-iteral=MONGO_USERNAME=${{ env.MONGO_USERNAME }} \
+            --from-literal=MONGO_PASSWORD=${{ secrets.MONGO_PASSWORD }} \
+            --save-config \
+            --dry-run=client \
+            -o yaml | kubectl apply -f -
+
+        - name: Deploy to Prod Env
+          run: |
+            kubectl apply -f kubernetes/prod
+
+        - name: Set App Ingress Host URL
+          id: set-ingress-host-address
+          run: |
+            echo "APP_INGRESS_HOST=$(kubectl -n ${{ vars.NAMESPACE }} get ingress -o jsonpath="{.items[0].spec.tls[0].hosts[0]}")" >> $GITHUB_ENV
+    
+    prod-integration-testing:
+        if: github.ref == 'refs/heads/main'
+        name: Prod Integration Testing
+        needs: prod-deploy
+        runs-on: ubuntu-latest
+        steps:
+          - name: Test URL Output using CURL and JQ
+            env:
+              URL: ${{ needs.prod-deploy.outputs.APP_INGRESS_URL }}  # Refer to the environment variable set earlier
+            run: |
+              echo $URL
+              echo "---------------------------------------------"
+              curl https://$URL/live-s-k -s -k | jq -r .status | grep -i live
