added composite action

--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -40,15 +40,10 @@ jobs:
           with:
             node-version: ${{ matrix.nodejs_version }}
         
-        - name: Cache NPM dependencies
-          uses: actions/cache@v3
+        - name: Composite Action - Cache & Install NPM Packages
+          uses: ./.github/custom-actions/npm-action
           with:
-           # npm cache files are stored in `~/.npm` on Linux/macOS
-           path: ~/.npm #node_modules
-           key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}
-    
-        - name: Install Dependencies
-          run: npm install
+            path-to-folder: node_modules
     
         - name: Unit Testing
           id: nodejs-unit-testing-step
@@ -92,12 +87,10 @@ jobs:
           with:
             node-version: 18
 
-        - name: Cache NPM Dependencies
-          uses: actions/cache@v3
+        - name: Composite Action - Cache & Install NPM Packages
+          uses: ./.github/custom-actions/npm-action
           with:
-            # npm cache files are stored in `~/.npm` on Linux/macOS
-             path: node_modules
-             key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}
+            path-to-folder: node_modules
 
         - name: Install Dependencies
           run: npm install
