--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -8,7 +8,7 @@ on:
       - 'feature/*'
  
 env: 
-    MONGO_URI: 'mongodb+srv://supercluster.d83jj.mongodb.net/superData'
+    MONGO_URI: ‘mongodb+srv://supercluster.d83jj.mongodb.net/superData'
     MONGO_USERNAME: ${{ vars.MONGO_USERNAME}}
     MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD}}
 jobs:
@@ -22,7 +22,7 @@ jobs:
         - name: Setup NodeJS Version
           uses: actions/setup-node@v3
           with:
-            node-version: 18
+            node-version: 20
     
         - name: Install Dependencies
           run: npm install
