--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -28,6 +28,7 @@ jobs:
           run: npm install
     
         - name: Unit Testing
+          continue-on-error: true
           run: npm test
           
         - name: Archive Test Result
@@ -36,3 +37,20 @@ jobs:
           with:
               name: Mocha-Test-Result
               path: test-results.xml
+
+    docker: 
+      name: Containerization
+      runs-on: ubuntu-latest
+      steps:
+      - name: Checkout
+        continue-on-error: true
+        uses: actions/checkout@v4
+
+
+      - name: Dockerhub Login
+        continue-on-error: true
+        uses: docker/login-action@v2.2.0
+        with: 
+          username: ${{ vars.DOCKERHUB_USERNAME}}
+          password: ${{ secrets.DOCKERHUB_PASSWORD}}
+      
