--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -54,3 +54,26 @@ jobs:
           username: ${{ vars.DOCKERHUB_USERNAME}}
           password: ${{ secrets.DOCKERHUB_PASSWORD}}
       
+
+      - name: Docker Build for Testing
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: false
+          tags: ${{ vars.DOCKERHUB_USERNAME}}/solar-system:${{ github.sha}}
+
+      - name: Docker Image testing
+        run: | 
+           docker images
+           docker run --name solar-system-app -d \ 
+                -p 3000:3000 \ 
+                -e MONGO_URI=$MONGO_URI \
+                -e MONGO_USERNAME=$MONGO_USERNAME \
+                -e MONGO_PASSWORD=$MONGO_PASSWORD \ 
+                ${{ vars.DOCKERHUB_USERNAME}}/solar-system:${{github.sha}}
+
+            export IP=$(docker inspect -f '{{rang .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
+            echo $IP
+
+            echo testing Image UTL using wget 
+            wget -q -O - 127.0.0.1:3000/live | grep live 
