--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -72,7 +72,7 @@ jobs:
                 -e MONGO_PASSWORD=$MONGO_PASSWORD \ 
                 ${{ vars.DOCKERHUB_USERNAME}}/solar-system:${{github.sha}}
 
-            export IP=$(docker inspect -f '{{rang .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
+            export IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
             echo $IP
 
             echo testing Image UTL using wget 
