Docker push to docker hub

--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -77,3 +77,11 @@ jobs:
 
             echo testing Image UTL using wget 
             wget -q -O - 127.0.0.1:3000/live | grep live 
+
+      - name: Docker Push
+        continue-on-error: true
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ vars.DOCKERHUB_USERNAME}}/solar-system:${{ github.sha}}          
