--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -56,6 +56,7 @@ jobs:
       
 
       - name: Docker Build for Testing
+        continue-on-error: true
         uses: docker/build-push-action@v4
         with:
           context: .
@@ -63,6 +64,7 @@ jobs:
           tags: ${{ vars.DOCKERHUB_USERNAME}}/solar-system:${{ github.sha}}
 
       - name: Docker Image testing
+        continue-on-error: true
         run: | 
            docker images
            docker run --name solar-system-app -d \ 
