--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -53,6 +53,14 @@ jobs:
         with: 
           username: ${{ vars.DOCKERHUB_USERNAME}}
           password: ${{ secrets.DOCKERHUB_PASSWORD}}
+
+      - name: GHCR Login
+        continue-on-error: true
+        uses: docker/login-action@v2.2.0
+        with: 
+            registry: ghcr.io
+            username: ${{ github.repository_owner}}
+            password: ${{ secrets.GITHUB_TOKEN}}
       
 
       - name: Docker Build for Testing
@@ -80,10 +88,12 @@ jobs:
             echo testing Image UTL using wget 
             wget -q -O - 127.0.0.1:3000/live | grep live 
 
-      - name: Docker Push
+      - name: CR Push
         continue-on-error: true
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME}}/solar-system:${{ github.sha}}          
+          tags: |
+           ${{ vars.DOCKERHUB_USERNAME}}/solar-system:${{ github.sha}}      
+           ghcr.io/${{ github.repository_owner}}/solar-system:${{ github.sha}} 
