--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -40,6 +40,8 @@ jobs:
 
     docker: 
       name: Containerization
+      permissions: 
+           packages: write
       runs-on: ubuntu-latest
       steps:
       - name: Checkout
@@ -53,6 +55,11 @@ jobs:
         with: 
           username: ${{ vars.DOCKERHUB_USERNAME}}
           password: ${{ secrets.DOCKERHUB_PASSWORD}}
+      - name: set lower case owner name
+        run: |
+            echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
+          env:
+            OWNER: '${{ github.repository_owner }}'
 
       - name: GHCR Login
         continue-on-error: true
@@ -96,4 +103,4 @@ jobs:
           push: true
           tags: |
            ${{ vars.DOCKERHUB_USERNAME}}/solar-system:${{ github.sha}}      
-           ghcr.io/${{ github.repository_owner}}/solar-system:${{ github.sha}} 
+           ghcr.io/OWNER_LC/solar-system:${{ github.sha}} 
