--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -98,4 +98,4 @@ jobs:
           push: true
           tags: |
            ${{ vars.DOCKERHUB_USERNAME}}/solar-system:${{ github.sha}}      
-           ghcr.io/"${{ github.repository_owner}}"/solar-system:${{ github.sha}}   
+           ghcr.io/a7mmed/solar-system:${{ github.sha}}   
