--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -64,7 +64,11 @@ jobs:
             username: ${{ github.repository_owner}}
             password: ${{ secrets.GITHUB_TOKEN}}
       
-
+      - name: set lower case owner name
+        run: |
+                 echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
+        env:
+                 OWNER: '${{ github.repository_owner }}'
       - name: Docker Build for Testing
         continue-on-error: true
         uses: docker/build-push-action@v4
@@ -98,4 +102,4 @@ jobs:
           push: true
           tags: |
            ${{ vars.DOCKERHUB_USERNAME}}/solar-system:${{ github.sha}}      
-           ghcr.io/a7mmed/solar-system:${{ github.sha}}   
+           ghcr.io/OWNER_LC/solar-system:${{ github.sha}}   
