--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -101,5 +101,27 @@ jobs:
           context: .
           push: true
           tags: |
-           ${{ vars.DOCKERHUB_USERNAME}}/solar-system:${{ github.sha}}      
-           ghcr.io/${{ env.OWNER_LC}}/solar-system:${{ github.sha}}   
+             ${{ vars.DOCKERHUB_USERNAME}}/solar-system:${{ github.sha}}      
+             ghcr.io/${{ env.OWNER_LC}}/solar-system:${{ github.sha}}   
+
+
+
+    dev-deploy:
+      needs: docker
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout
+          continue-on-error: true
+          uses: actions/checkout@v4
+
+
+        - name: install kubectl CLI
+          uses: azure/setup-kubectl@v3
+          with:
+            version: 'v1.26.0'
+      
+        - name: Fetch Kube cluster detail 
+          run: |
+            kubectl version --short
+            echo ---------------------------
+            kubectl get nodes
