--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -130,7 +130,7 @@ jobs:
             
 
     prod-deploy:
-      needs: dev-deploy
+      needs: docker
       environment:
          name: Production
       runs-on: ubuntu-latest
@@ -145,9 +145,8 @@ jobs:
           with:
             version: 'v1.26.0'
       
-        - name: Fetch Kube cluster detail 
-          run: |
-            kubectl version --short
-            echo ---------------------------
-            kubectl get nodes     
-                 
+        # - name: Fetch Kube cluster detail 
+        #   run: |
+        #     kubectl version --short
+        #     echo ---------------------------
+        #     kubectl get nodes     
