--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -107,6 +107,7 @@ jobs:
 
 
     dev-deploy:
+      if: contains(github.ref,'feature/')
       needs: docker
       environment:
          name: Development
@@ -130,6 +131,7 @@ jobs:
             
 
     prod-deploy:
+      if: github.ref == 'refs/heads/main'
       needs: docker
       environment:
          name: Production
