--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -15,10 +15,10 @@ jobs:
         - name: Checkout Repository
           uses: actions/checkout@v4
 
-        - name: Setup NodeJS Version
+        - name: Setup NodeJS Version - 18
           uses: actions/setup-node@v3
           with:
-            node-version: 20
+            node-version: 18 
     
         - name: Install Dependencies
           run: npm install
