--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -27,6 +27,17 @@ jobs:
         steps:
         - name: Checkout Repository
           uses: actions/checkout@v4
+        
+        - name: Setup NodeJS Version - ${{ matrix.nodejs_version }}
+          uses: actions/setup-node@v3
+          with:
+            node-version: ${{ matrix.nodejs_version }}
+
+        - name: Cache NPM dependencies
+          uses: actions/cache@v3
+          with:
+            path: node_modules
+            key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }} 
 
         - name: Setup NodeJS Version
           uses: actions/setup-node@v3
