--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -81,6 +81,12 @@ jobs:
         with:
           node-version: 18
 
+      - name: Cache NPM dependencies
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }} 
+
       - name: Install Dependencies
         run: npm install
         shell: bash
