--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -101,3 +101,19 @@ jobs:
           name: Code-Coverage-Result
           path: coverage
           retention-days: 5
+
+    docker:
+      name: Containerization
+      needs: [unit-testing, code-coverage]
+      permissions: 
+          packages: write
+      runs-on: ubuntu-latest
+      steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v4
+
+      - name: Dockerhub Login
+        uses: docker/login-action@v2.2.0
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
