--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -148,9 +148,11 @@ jobs:
           echo Testing Image URL using wget 
           wget -q -O - 127.0.0.1:3000/live | grep live
 
-      - name: Docker Push
+      - name: Container Registry Push
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+          tags: |
+              ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+            #  ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}
