--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -154,5 +154,5 @@ jobs:
           context: .
           push: true
           tags: |
-              # ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
+              ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
               ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}
