--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -178,8 +178,8 @@ jobs:
       
       - name: Install kubectl CLI
         uses: azure/setup-kubectl@v3
-        with:
-          version: '1.26'
+        with: 
+          version: 'v1.28.2'
 
       - name: Set Kubeconfig file
         uses: azure/k8s-set-context@v3
