dev-deploy test on main branch

--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -169,7 +169,7 @@ jobs:
 
 
     dev-deploy:
-      if: contains(github.ref, 'feature/')
+      # if : contains(github.ref, 'feature/')
       needs: docker
       uses: ./.github/workflows/reuse-deployment.yml
       secrets: 
